Added Html Link from Home Page to Contact Page

--- a/MVC_Start/Views/Home/Contact.cshtml
+++ b/MVC_Start/Views/Home/Contact.cshtml
@@ -18,7 +18,8 @@
   <button type="submit">Submit</button>
 </form>
 
-<a href="/home/index">Home page in html</a>
+<a href="/home/index">Return to WordSort Page</a>
+<h5>The WordSort page takes an input Word and sorts the characters alphabetically</h5>
 <p>
 
 </p>
